# go-now

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.dashboard  Dockerfile.ingest  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-api.yml  ci-dashboard.yml  ci-ingest.yml  ci-scoring.yml
apps/dashboard_nextjs/: .env.example  README.md  package-lock.json  package.json
apps/dashboard_nextjs/public/lottie/: dog.json  run.json  swim.json
apps/dashboard_nextjs/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
apps/dashboard_nextjs/src/app/about/: page.tsx
apps/dashboard_nextjs/src/app/formula/: page.tsx
apps/dashboard_nextjs/src/app/status/: page.tsx
apps/dashboard_nextjs/src/components/: AboutView.tsx  ActivityCharacter.tsx  AmbientBackground.tsx  BestWindow.tsx  ConditionsGrid.tsx  DailyForecast.tsx  DayDetailSheet.tsx  DayTimeline.tsx  Footer.tsx  ForecastView.tsx  FormulaView.tsx  FreshnessBadge.tsx  GithubIcon.tsx  HeroSection.tsx  HourDetailSheet.tsx  HourRow.tsx  HourlyCarousel.tsx  Logo.tsx  ModeSelector.tsx  NavBar.tsx  NowCard.tsx  PageTransition.tsx  ReasonChip.tsx  ScoreCard.tsx  StatusView.tsx  ThemeToggle.tsx
apps/dashboard_nextjs/src/lib/: api.ts  condition-severity.ts  metrics.ts  score-utils.ts  sun.ts  types.ts  useAnimatedNumber.ts
apps/dashboard_nextjs/src/providers/: ThemeProvider.tsx
apps/ios_go_now/: README.md
apps/ios_go_now/GoNow/: GoNowApp.swift
apps/ios_go_now/GoNow.xcodeproj/: project.pbxproj
apps/ios_go_now/GoNow.xcodeproj/xcshareddata/xcschemes/: GoNow.xcscheme
apps/ios_go_now/GoNow/App/: AppRootView.swift  AppTab.swift
apps/ios_go_now/GoNow/Assets.xcassets/AccentColor.colorset/: Contents.json
apps/ios_go_now/GoNow/DesignSystem/: Components.swift  ScoreStyle.swift
apps/ios_go_now/GoNow/Domain/: ForecastAnalytics.swift  ForecastMetric.swift  HealthModels.swift  Models.swift
apps/ios_go_now/GoNow/Features/ForecastDetails/: DayDetailSheet.swift
apps/ios_go_now/GoNow/Features/Planner/: PlannerView.swift
apps/ios_go_now/GoNow/Features/Profile/: AboutView.swift  FormulaView.swift  ProfileView.swift  StatusView.swift
apps/ios_go_now/GoNow/Features/Today/: TodayView.swift
apps/ios_go_now/GoNow/Networking/: ForecastAPIClient.swift
apps/ios_go_now/GoNow/State/: ForecastStore.swift
apps/ios_go_now/GoNowTests/: Fixtures.swift  ForecastAPITests.swift  ForecastAnalyticsTests.swift  GoNowTests.swift
docs/: 00_EXECUTION_ORDER.md  00_README.md  01_vision.md  02_user_profile_schema.md  03_data_sources.md  04_scoring_engine_v1.md  05_backend_architecture.md  06_notification_spec.md  07_dashboard_spec.md  08_deployment_release.md  09_repo_bootstrap.md  10_UX_UI_SPEC.md  11_testing_strategy.md  12_ci_cd_pipeline.md  13_observability_data_quality.md  14_api_reference.md  15_scored_forecast_contract.md
docs/assets/: README.md
infra/: DEPLOYMENT.md  README.md
scripts/: diagnose-ingest.sh
services/api_fastapi/: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml
services/api_fastapi/models/: schemas.py
services/api_fastapi/routers/: public.py
services/api_fastapi/storage/: firestore.py
services/api_fastapi/tests/: conftest.py  test_public.py
services/ingest_worker/: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml
services/ingest_worker/dq/: checks_v1.py
services/ingest_worker/load/: bigquery.py  firestore_serving.py  gcs_raw.py
services/ingest_worker/provider/: aqicn.py  base.py  open_meteo.py
services/ingest_worker/tests/: conftest.py  test_aqicn.py  test_dq.py  test_normalize.py  test_open_meteo.py
services/scoring_engine/: README.md  pyproject.toml
services/scoring_engine/scoring_engine/: __init__.py  engine.py  thresholds.py
services/scoring_engine/tests/: test_scoring.py
services/shared_contracts/: README.md
services/shared_contracts/python/: forecast.py  health.py  scoring.py
