[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["routers", "auth", "storage", "models", "config.py", "main.py"]

[project]
name = "api-fastapi"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "google-cloud-firestore>=2.14,<3.0",
    "firebase-admin>=7.4.0,<8.0",
    "python-dotenv>=1.2.2,<2.0",
    "structlog>=24.1,<26.0",
    "scoring-engine",
]

[tool.uv.sources]
scoring-engine = { path = "../scoring_engine" }

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "httpx>=0.28.1,<1.0",
    "black>=26.3.1",
    "ruff>=0.15.11",
    "mypy>=1.10",
    "pyasn1>=0.6.3",
    "cryptography>=46.0.7",
    "requests>=2.33.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
