[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scoring-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scoring_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
