[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scoring-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0",
    "Pygments>=2.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scoring_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
